SP-1381: vertical alignment in gallery images fixed (articles menu)

--- a/src/components/CategoryList.scss
+++ b/src/components/CategoryList.scss
@@ -121,7 +121,7 @@
 				height: 23vw;
 				overflow: hidden;
 				-ms-flex-align: center;
-				align-items: center;
+				align-items: flex-start;
 				-ms-flex-pack: center;
 				justify-content: center;
 				margin-left: -4vw;
